--- a/views/addpage.html
+++ b/views/addpage.html
@@ -27,16 +27,19 @@
     </div>
 
     <div class="form-group">
-      <label for="content" class="col-sm-2 control-label" >Page Content</label>
+      <label for="title" class="col-sm-2 control-label">Page Content</label>
       <div class="col-sm-10">
-        <input name="content" type="text" style="height: 300px;" class="form-control"/>
+        <textarea name="content" class="form-control" style="height: 300px;"></textarea>
       </div>
     </div>
 
     <div class="form-group">
-      <label for="status" class="col-sm-2 control-label" >Page Status</label>
+      <label for="title" class="col-sm-2 control-label">Status</label>
       <div class="col-sm-10">
-        <input name="status" type="text" class="form-control"/>
+      <select name='status'>
+        <option>open</option>
+        <option>closed</option>
+      </select>
       </div>
     </div>
 
